--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-node_modules
+# Dependencias
+/node_modules
+
+# Archivos de compilación de Next.js
+/.next/
+/out/
+
+# Archivos de entorno
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Archivos de cache
+*.log
+*.log.*
+
+# Otros
+.DS_Store
